--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -1,7 +1,3 @@
-/* .wy-nav-content { */
-/*     max-width: 70% !important; */
-/* } */
-
 /* override table width restrictions */
 .wy-table-responsive table td, .wy-table-responsive table th {
     /* !important prevents the common CSS stylesheets from
@@ -22,3 +18,16 @@
 .highlight .hll {
     background-color: #e8e8e8;
 }
+
+/* .wy-nav-content { */
+    /* height: 100%; */
+    /* max-width: 1500px; */
+    /* max-width: 60% !important; */
+    /* margin: auto; */
+    /* background-color: #ffffff; */
+/* } */
+
+/* .wy-nav-content-wrap { */
+/*     /* background color of wrap around main content*/ */
+/*     background-color: white; */
+/* } */
