fix pytest display

--- a/docs/_static/css/custom-anaconda-doc.css
+++ b/docs/_static/css/custom-anaconda-doc.css
@@ -1,5 +1,13 @@
 @import url("theme.css");
 
+/* Push the math equation label to the right */
+.math {
+    text-align: left;
+}
+.eqno {
+    float: right;
+}
+
 .wy-nav-content {
     padding: 1.618em 3.236em;
     height: 100%;
