--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -19,6 +19,14 @@
     background-color: #e8e8e8;
 }
 
+/* Push the math equation label to the right */
+.math {
+    text-align: left;
+}
+.eqno {
+    float: right;
+}
+
 /* .wy-nav-content { */
     /* height: 100%; */
     /* max-width: 1500px; */
