--- a/docs/source/_static/css/custom-pydata.css
+++ b/docs/source/_static/css/custom-pydata.css
@@ -40,3 +40,33 @@ span.synco{
 /* img { */
 /*   shape-rendering: geometricprecision; */
 /* } */
+
+.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.buttonHolder {
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+button {
+    /* background-color: #4caf50; */
+    /* border: none; */
+    /* padding: 15px 32px; */
+    /* color: white; */
+    text-align: center;
+    text-decoration: none;
+    /* font-size: 16px; */
+    /* border-radius: 10px; */
+    /* margin: 10px auto; */
+    /* cursor: pointer; */
+    /* display: block; */
+}
