--- a/docs/source/_static/css/custom-pydata.css
+++ b/docs/source/_static/css/custom-pydata.css
@@ -57,5 +57,9 @@ pre[class*=language-bib] {
 
 .custom-card-link:hover {
     /* --pst-color-panel-background: blue; */
-    filter: invert(5%);
+    filter: invert(4%);
+}
+
+.custom-card-link-2:hover {
+    filter: contrast(1.05);
 }
