--- a/docs/source/_static/css/custom-pydata.css
+++ b/docs/source/_static/css/custom-pydata.css
@@ -85,3 +85,22 @@ pre[class*=language-bib] {
 html[data-theme="dark"] button.copybtn {
     filter: invert(0.88) brightness(1.1);
 }
+
+/* Logo color */
+img.logo__image {
+    /* filter: grayscale(1) brightness(1.5); */
+}
+
+img.logo__image:hover {
+    filter: brightness(1.3);
+}
+
+/* Tables where the second column it right-aligned */
+table.right2 th:nth-child(2), td:nth-child(2) {
+    text-align: right;
+}
+
+/* Tables where the third column it right-aligned */
+table.right2 th:nth-child(3), td:nth-child(3) {
+    text-align: right;
+}
