--- a/docs/source/_static/css/custom-pydata.css
+++ b/docs/source/_static/css/custom-pydata.css
@@ -114,12 +114,12 @@ table.custom-table {
     margin-right: auto;
 }
 
-.sidebar.custom-sidebar {
-    border-color: var(--pst-color-border);
-    background-color: var(--pst-color-surface);
+.custom-sidebar {
+    border-color: var(--pst-color-border) !important;
+    background-color: var(--pst-color-surface) !important;
     font-size: smaller;
 }
 
-.sidebar.custom-sidebar p.sidebar-title {
-    text-align: center;
+.custom-sidebar p.sidebar-title {
+    text-align: center !important;
 }
